Tentative fix for T57066: Daily build of Blend 2.79 crashes on OSX Mojave.

Looks like we need to explicitly set i18n language to default value on
some OSs... Unless that 'need to create new translated-name IDs in
versionning code for startup file' situation is really seldom.

Anyway, hopefully that will fix the crash.